[project]
name = "gpt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
]
